Foundation Project - Added CSS
added some CSS to finish getting the layout right

--- a/frameworks/first_foundation_mockup.html
+++ b/frameworks/first_foundation_mockup.html
@@ -8,11 +8,100 @@
     <!-- put in font awesome -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <style type="text/css">
-    * {
+/*    * {
       border: 1px solid red;
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
+    }*/
+
+    .standout { color: #f16753; }
+    .grey-text {color: #818181;}
+
+    .nav-button {
+      margin-right: 10px;
+      cursor: pointer;
+      font-size: 11px;
+      color: #a0a0a0;
+    }
+    .nav-button.active {
+      padding: 5px;
+      border-radius: 5px;
+      color: white;
+      background: #f16753;
+    }
+    .hero-wrapper {
+      background: url('https://raw.github.com/makersquare/first-full-layout/master/eterna/background.jpg') no-repeat;
+      padding-top: 83px;
+      min-height: 338px;
+      overflow: hidden;
+    }
+
+    .hero-wrapper h3 {
+      font-weight: 900;
+    }
+
+    .headerwrap {
+      margin: 25px auto;
+      /*CHANGE FROM TUTORIAL*/
+      /*tutorial has this at 25px 0;  but it clearly needs to be 25px auto*/
+    }
+
+    .right-feature-sides {
+      margin-left: 78px;
+      width: 190px;
+    }
+
+    .right-feature-sides h4 {
+      margin-top: 0px;
+      font-size: 24px;
+      font-weight: 200;
+    }
+
+    .features-and-footer {
+      margin-top: 44px;
+    }
+
+    .feature-dot {
+      width: 60px;
+      height: 60px;
+      vertical-align: middle;
+      padding-top: 4px;
+      font-size: 35px;
+      float: left;
+      background: #f16753;
+      border-radius: 50%;
+      color: white;
+      text-align: center;
+    }
+    .learn-more-link {
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+      display: block;
+    }
+
+    footer {
+      border-top: 1px solid #ddd;
+      padding-top: 15px;
+      /*CHANGE FROM TUTORIAL*/
+      /*removed margin-top: 80px because foundation's CSS for rows was overriding*/
+      /*added a <div class="row"> between section 3 and footer in order to provide appropriate space*/
+    }
+
+    .subscribe {
+      background: #dc5e4c;
+      border: 0;
+      color: white;
+      height: 33px;
+      border-radius: 0 3px 3px 0;
+      padding: 0 20px;
+      margin-left: -5px;
+    }
+    .subscribe-email {
+      width: 200px;
+      height: 35px;
+      border: 0;
     }
 
     
@@ -94,14 +183,24 @@
       </div>
     </div> <!-- end of 3rd section -->  
 
+    <!-- CHANGE FROM TUTORIAL -->
+    <!-- I put this section in to get space between the features and the footer.  Margins were overridden by Foundation's row class. Didn't want to use important or assign an ID. -->
+    <div class = "row"> <!--here to add space -->
+      <p>  </p>
+    </div>
+
 
     <footer class="row">
-      <div class="large-3 columns"></div>
+      <div class="large-3 columns"> 
+        <p>  </p>
+      </div>
       <div class="large-6 columns">
           <h3 class="text-center">Our <strong>Pricing</strong></h3>
           <p class="text-center"><small class="grey-text">Lorem ipsum dolor sit amet, labores dolorum scriptorem eum an, te quodsi sanctus neglegentur</small></p>
         </div>
-        <div class="large-3 columns"></div>
+        <div class="large-3 columns">  
+          <p>  </p>
+        </div>
     </footer>
 
   </div> <!-- end of class="container" features and footer -->
