missing semi-colon

--- a/javascript/lockbox.html
+++ b/javascript/lockbox.html
@@ -37,8 +37,8 @@
       num_clicks ++;
       $('#counter').html('Clicks: ' + num_clicks);
       if (num_clicks%5 == 0) {
-        alert("New High Score! " + num_clicks);
-      }
+        alert("New High Score: " + num_clicks + "!");
+      };
     });
       
     $('#open-link').on('click', function (e) {
