changed from alert/prompt to on screen
1. created h2, start button, instructions p, div for form, and div for
feedback
2. created start_game function which gets a random number and a
landline number
3. created function for what happens on form submission
4. modified check_guess function to put most responses in
#feedback_text rather than an alert

--- a/javascript/guess-the-number.html
+++ b/javascript/guess-the-number.html
@@ -1,38 +1,74 @@
 <html>
 <head>
   <title>Guess the Number!</title>
+  <style>
+    form, #feedback {
+      background-color: yellow;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      padding: 10px;
+      float: left;
+      display: none;
+      clear: both;
+    }
+
+  </style>
 </head>
 <body>
-	<button onclick="get_secret_number();">PLAY GAME!</button>
-
+	<h2>Guess the Number Game</h2>
+  <button onclick="start_game();">START THE GAME!</button>
+  <p>Please guess a number between 1 and 100.  But stay away from the landmine number!</p>
+  <form>
+  <input name="guess" id="guess" placeholder="Enter a number."></input><input type="submit" value="GUESS" />
+  </form>
+  <div id="feedback">
+    <p id="feedback_text"></p>
+  </div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript">
+
   var secretNumber;
   var guess;
-  var my_button = document.getElementsByTagName('button');
+  var landmineNumber;
+  var $form = $('form');
+  var $feedback_text = $('#feedback_text');
+  var $feedback = $('#feedback');
+  var $guess = $('#guess');
 
-  var get_secret_number = function() {
+  var start_game = function() {
   	secretNumber = parseInt(Math.random() * 100, 10) + 1;
+    landmineNumber = parseInt(Math.random() * 100, 10) + 1;
+    if (secretNumber === landmineNumber) {
+      start_game();
+    };
   	console.log(secretNumber);
-  	prompt_player();
+    console.log(landmineNumber);
+    $form.show();
   };
   
-  var prompt_player = function() {
-  	guess = prompt("What's your best guess? Input a number between 1 and 100.");
-  	check_guess(guess);
-  };
+  $form.submit(function (e) {
+    var formdata = $form.serializeArray();
+    e.preventDefault();
+    console.log(formdata);
+    var current_guess = formdata[0].value;
+    console.log(current_guess);
+    check_guess(current_guess);
+    $feedback.show();
+    $guess.val('')
+  })
 
   var check_guess = function(guess) {
   	if (guess > secretNumber) {
-  		alert("Your guess is too high!");
-  		prompt_player();
+  		$feedback_text.html("Your guess is too high! Guess again.");
   	} else if (guess < secretNumber) {
-  		alert("Your guess is too low!");
-  		prompt_player();
+  		$feedback_text.html("Your guess is too low! Guess again.");
   	} else if (guess == secretNumber) {
-  		alert("Congrats! You got the correct number!");
+  		$feedback_text.html("Congrats! You got the correct number!");
+      $form.hide();
+      $feedback.hide();
   	} else {
   		alert("Please enter only numbers!");
-  		prompt_player();
   	};
   };
 </script>
